adding docker-compose example and remove ingress

--- a/docs/modules/setup/pages/install.adoc
+++ b/docs/modules/setup/pages/install.adoc
@@ -59,6 +59,26 @@ Finally, to start a container in detached mode, you use `-d` option:
 [source,docker-cli]
 docker run -p8080:8000 -d yuzutech/kroki
 
+== Using docker-compose
+
+==== to install
+
+[shell]
+....
+cd docs/modules/setup/examples/
+docker-compose -f kroki-docker-compose.yml up
+
+# On Terminal 2, test if /seqdiag works
+curl http://localhost:8000/seqdiag/svg/eNorTi1MyUxMV6jmUlBIKsovL04tUtC1UyhPTQKyyoCc6JzEpNQcBVsFJXfXEAX9zLyU1Aq9jJLcHKVYayQ9Nrq6CE3WhA0L8A8GmpaUk5-un5yfm5uaVwIxD6EWqDElsSQxKbE4FUmfp1-wa1CIAg49IFfANOFxXS0A68hQUg==
+....
+
+==== to uninstall
+
+[shell]
+....
+docker-compose -f kroki-docker-compose.yml down
+....
+
 == Using kubernetes
 
 ==== To install Kroki on default namespace
@@ -68,13 +88,7 @@ docker run -p8080:8000 -d yuzutech/kroki
 kubectl apply -f docs/modules/setup/examples/k8s/
 ....
 
-==== To install Kroki on kroki namespace (Optional)
-
-[shell]
-....
-kubectl create ns/kroki
-kubectl apply -n kroki -f docs/modules/setup/examples/k8s/
-....
+==== To test the installation is successful
 
 [shell]
 ....
@@ -85,18 +99,11 @@ kubectl port-forward service/kroki 8000:8000
 curl http://localhost:8000/seqdiag/svg/eNorTi1MyUxMV6jmUlBIKsovL04tUtC1UyhPTQKyyoCc6JzEpNQcBVsFJXfXEAX9zLyU1Aq9jJLcHKVYayQ9Nrq6CE3WhA0L8A8GmpaUk5-un5yfm5uaVwIxD6EWqDElsSQxKbE4FUmfp1-wa1CIAg49IFfANOFxXS0A68hQUg==
 ....
 
-==== Uninstall on kubernetes (Default namespace)
+==== Uninstall on kubernetes (default namespace)
 
 [shell]
 ....
 kubectl delete -f docs/modules/setup/examples/k8s/
-....
-
-==== Uninstall on kubernetes (Kroki namespace)
-
-[shell]
-....
-kubectl delete -n kroki -f docs/modules/setup/examples/k8s/
 ....
 
 === Images
